[package]
name = "reefgame"
version = "0.1.0"
authors = ["Tomas Krizek <tomas.krizek@mailbox.org>"]
edition = "2018"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = { version = "0.20", features = ["derive"] }
maplit = "1.0.2"
